name:                witherable
version:             0.1.3
synopsis:            Generalization of filter and catMaybes
-- description:
homepage:            https://github.com/fumieval/witherable
license:             BSD3
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          Fumiaki Kinoshita <fumiexcel@gmail.com>
copyright:           Copyright (c) 2014 Fumiaki Kinoshita
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Data.Witherable
  -- other-modules:
  -- other-extensions:
  build-depends:       base == 4.*,
                       base-orphans,
                       containers,
                       hashable,
                       transformers,
                       unordered-containers,
                       vector
  hs-source-dirs:      src
  default-language:    Haskell2010
