name:                witherable
version:             0.2
synopsis:            filterable traversable
description:         A stronger variant of `traverse` which can remove elements and generalised mapMaybe, catMaybes, filter
homepage:            https://github.com/fumieval/witherable
license:             BSD3
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          Fumiaki Kinoshita <fumiexcel@gmail.com>
copyright:           Copyright (c) 2014 Fumiaki Kinoshita
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
tested-With: GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.2

source-repository head
  type: git
  location: https://github.com/fumieval/witherable.git

library
  exposed-modules:     Data.Witherable
  -- other-modules:
  -- other-extensions:
  build-depends:       base == 4.*,
                       base-orphans,
                       containers,
                       hashable,
                       transformers,
                       unordered-containers,
                       vector
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
