name:                witherable
version:             0.3.3
synopsis:            filterable traversable
description:         A stronger variant of `traverse` which can remove elements and generalised mapMaybe, catMaybes, filter
homepage:            https://github.com/fumieval/witherable
license:             BSD3
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          Fumiaki Kinoshita <fumiexcel@gmail.com>
copyright:           Copyright (c) 2014 Fumiaki Kinoshita
category:            Data
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10
tested-With: GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.3

source-repository head
  type: git
  location: https://github.com/fumieval/witherable.git

library
  exposed-modules:     Data.Witherable
  -- other-modules:
  -- other-extensions:
  build-depends:       base == 4.*,
                       base-orphans,
                       containers >= 0.5,
                       hashable,
                       lens,
                       monoidal-containers,
                       transformers,
                       transformers-compat,
                       unordered-containers,
                       vector
  hs-source-dirs:      src
  ghc-options:         -Wall -Wcompat
  default-language:    Haskell2010
