cabal-version:       2.4
name:                witherable-class
version:             0
synopsis:            Witherable = Traversable + Filterable
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          fumiexcel@gmail.com
copyright:           Copyright (c) 2019- Fumiaki Kinoshita
category:            Data
extra-source-files:  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/fumieval/witherable.git

library
  exposed-modules:     Data.Witherable.Class
  build-depends:       base >= 4.8 && <5
    , containers ^>= 0.6
    , transformers ^>= 0.5
    , unordered-containers ^>= 0.2
    , vector ^>= 0.12
    , base-orphans ^>= 0.8
    , hashable ^>= 1.3
  -- hs-source-dirs:
  default-language:    Haskell2010
