cabal-version:       2.4
name:                witherable-class
version:             0.0.1
synopsis:            Witherable = Traversable + Filterable
description:         This package is deprecated. Use the witherable package instead
bug-reports:         https://github.com/fumieval/witherable
license:             BSD-3-Clause
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          fumiexcel@gmail.com
copyright:           Copyright (c) 2021 Fumiaki Kinoshita
category:            Data
extra-source-files:  CHANGELOG.md
tested-with:         GHC ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.3 || ==9.0.1

source-repository head
  type: git
  location: git@github.com:fumieval/witherable.git
  subdir: witherable-class

library
  exposed-modules:     Data.Witherable.Class
  build-depends:       base >= 4.9 && <5
                     , witherable ^>= 0.4
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat
