cabal-version:       2.4
name:                witherable
version:             0.4
synopsis:            filterable traversable
description:         A stronger variant of `traverse` which can remove elements and generalised mapMaybe, catMaybes, filter
homepage:            https://github.com/fumieval/witherable
license:             BSD-3-Clause
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          Fumiaki Kinoshita <fumiexcel@gmail.com>
copyright:           Copyright (c) 2014 Fumiaki Kinoshita
category:            Data
build-type:          Simple
extra-source-files:  CHANGELOG.md
tested-with: GHC==8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.3, GHC == 8.8.4, GHC == 8.10.3

source-repository head
  type: git
  location: https://github.com/fumieval/witherable.git

library
  exposed-modules:
    Witherable
    Data.Witherable
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.9 && <5,
                       base-orphans,
                       containers >= 0.5,
                       hashable,
                       transformers,
                       transformers-compat,
                       unordered-containers >=0.2.12.0,
                       vector,
                       indexed-traversable,
                       indexed-traversable-instances,
  hs-source-dirs:      src
  ghc-options:         -Wall -Wcompat
  default-language:    Haskell2010
